Fix cloud icon color in dark mode

--- a/src/components/tw-cloud-variable-badge/cloud-variable-badge.css
+++ b/src/components/tw-cloud-variable-badge/cloud-variable-badge.css
@@ -14,6 +14,9 @@
 .icon {
     margin-right: 0.25rem;
 }
+[theme="dark"] .icon {
+    filter: invert(100%);
+}
 
 .text {
 
